# AI-resume-analyzer

./: .env.example  .gitignore  AGENTIC_FLOW_PRESENTATION.md  DEPLOY.md  OPEN_SOURCE_VOICE_ARCHITECTURE.md  Procfile  README.md  app.py  backend_app.py  fetch_indeed_uk_jobs.py  pyproject.toml  render.yaml  requirements.txt  start_backend.bat  start_backend.ps1  start_frontend.bat  start_frontend.ps1
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  components.jsx  hooks.js  styles.css
src/: agentic_ai.py  ats_ai.py  course_recommender.py  helper.py  interview_ai.py  job_api.py  local_voice_stack.py  multimodal_ai.py  resume_builder_ai.py
